kubernetes/order-service/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      automountServiceAccountToken: false
      containers:
        - name: order-service

          image: 878445923420.dkr.ecr.us-east-1.amazonaws.com/order-service:1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3002

          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
              ephemeral-storage: "256Mi"

            limits:
              memory: "256Mi"
              cpu: "500m"
