kubernetes/order-service/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-ingress

spec:
  rules:
    - host: order.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: order-service

                port:
                  number: 80
